2007-04-18  Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlForm.cs: for TARGET_J2EE: 
	used Page.Request.Browser to determine RenderUplevel

2007-04-17  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs: use the new uplevel browser detection code.

2007-04-11  Marek Habersack  <mhabersack@novell.com>

	* HtmlInputHidden.cs:
	* HtmlSelect.cs:
	* HtmlInputText.cs:
	* HtmlSelect.cs:
	* HtmlInputText.cs:
	* HtmlInputImage.cs:
	* HtmlInputFile.cs:
	* HtmlInputCheckBox.cs:
	* HtmlInputRadioButton.cs:
	* HtmlInputImage.cs: do not register the control for post back
	processing or if it's disabled.

2007-04-06  Marek Habersack  <mhabersack@novell.com>

	* HtmlForm.cs: render the 'name' attribute only when in non-xhtml
	compliant mode.

2007-02-19  Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlInputCheckBox.cs:
	* HtmlInputControl.cs:
	* HtmlInputHidden.cs:
	* HtmlInputRadioButton.cs:
	* HtmlInputText.cs:
	* HtmlSelect.cs:
	* HtmlTextArea.cs:
	fixed: Form.SubmitDisabledControls feature:	
	not all HtmlInputControl need to be reenabled on client.		  

2007-02-18  Eyal Alaluf <eyala@mainsoft.com>

	* HtmlForm.cs: Under TARGET_J2EE use Page.RenderResponse instead of
	  GetRenderResponse.

2007-01-20  Miguel de Icaza  <miguel@novell.com>

	* HtmlHead.cs: comment out unused code, in particular metadata is
	commented out because nothing could have triggered its creation.

	* HtmlButton.cs: Move declaration of `csm' inside the 1.1 case.

2007-01-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlLink.cs: fixed RenderAttributes, href should be resolved

2007-01-14  Eyal Alaluf  <eyala@mainsoft.com>

	* HtmlForm.cs, HtmlAnchor.cs: Added J2EE Portal support for TARGET_J2EE.

2007-01-14  Eyal Alaluf  <eyala@mainsoft.com>

	* HtmlInputImage.cs: to handle correctly relative URLs to the image.

2007-01-07  Igor Zelmanovich  <igorz@mainsoft.com>

	* HtmlInputRadioButton.cs: fixed: LoadPostData.		  

2007-01-07  Igor Zelmanovich  <igorz@mainsoft.com>
